<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">엔팡</string>
    <string name="noti_desc">정산할 시간입니다.</string>
    <string name="empty">없엉</string>
    <string name="total">합계</string>
    <string name="bank_name">은행 이름</string>
    <string name="account_number">계좌번호</string>
    <string name="add_payment">항목 추가</string>
    <string name="account_info">입금 계좌</string>
    <string name="amount">금액</string>
    <string name="attendee">참석자</string>
    <string name="search">검색</string>
    <string name="create_payment_group">새로 만들기</string>
    <string name="payment_title_hint">%s차</string>
    <string name="calculate">정산</string>
    <string name="edit">편집</string>
    <string name="share">공유</string>
    <string name="items">항목별</string>
    <string name="delete_vertical">삭\n제</string>
    <string name="delete">삭제</string>
    <string name="delete_desc">정말 삭제하시겠습니까?</string>
    <string name="by_attendee">참석자별</string>
    <string name="attendee_count">%d명</string>
    <string name="add_attendee">추가</string>
    <string name="alarm_on">알림</string>
    <string name="alarm_off">안알림</string>
    <string name="receipt_format_title">▷ %s\r\n</string>
    <string name="receipt_format_item_attendee"> • %1$s : %2$s\r\n</string>
    <string name="receipt_format_item_attendee_checked"> ✓ %1$s : %2$s\r\n</string>
    <string name="receipt_format_item_payment"> • %1$s :\r\n   %2$s ÷  %3$d =  %4$s\r\n</string>
    <string name="msg_fill_in_the_blanks">금액과 참석자를 채워주세요.</string>
    <string name="msg_already_exist_attendee">이미 등록된 참석자입니다.</string>
    <string name="msg_unknown_error">오류가 발생하였습니다. ㅈㅅㅈㅅ</string>
    <string name="msg_more_than_one">하나 이상 있어야 합니다.</string>
    <string name="title_input">입력</string>
    <string name="title_receipt">정산</string>
    <string name="title_attendee">참석자</string>

    <string-array name="alarm_period">
        <item>매일</item>
        <item>격일로</item>
        <item>사흘마다</item>
        <item>4일마다</item>
        <item>5일마다</item>
        <item>6일마다</item>
        <item>일주일마다</item>
    </string-array>

    <string-array name="banks">
        <item>경남은행</item>
        <item>광주은행</item>
        <item>국민은행</item>
        <item>기업은행</item>
        <item>농협</item>
        <item>대구은행</item>
        <item>도이치뱅크</item>
        <item>부산은행</item>
        <item>산업은행</item>
        <item>상호저축은행</item>
        <item>새마을금고</item>
        <item>수협중앙회</item>
        <item>신용협동조합</item>
        <item>신한은행</item>
        <item>외환은행</item>
        <item>우리은행</item>
        <item>우체국</item>
        <item>전북은행</item>
        <item>제주은행</item>
        <item>하나은행</item>
        <item>한국씨티은행</item>
        <item>BOA</item>
        <item>HSBC</item>
        <item>JP모간</item>
        <item>SC은행</item>
        <item>교보증권</item>
        <item>대신증권</item>
        <item>대우증권</item>
        <item>동부증권</item>
        <item>동양증권</item>
        <item>메리츠증권</item>
        <item>미래에셋</item>
        <item>부국증권</item>
        <item>삼성증권</item>
        <item>아이엠증권</item>
        <item>신영증권</item>
        <item>신한금융투자</item>
        <item>우리투자증권</item>
        <item>유진증권</item>
        <item>키움증권</item>
        <item>하나대투증권</item>
        <item>하이투자증권</item>
        <item>한국투자</item>
        <item>한화투자증권</item>
        <item>현대증권</item>
        <item>이트레이드</item>
        <item>HMC증권</item>
        <item>LIG증권</item>
        <item>NH농협증권</item>
        <item>SK증권</item>
        <item>산림조합</item>
        <item>BNP파리바은행</item>
    </string-array>

</resources>