<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" >

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:background="@null" >
            </EditText>
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/card_shadow" />

        <LinearLayout
            android:id="@+id/payment_view_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="3dp" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="2dp" >

            <RelativeLayout
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="112dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_toLeftOf="@id/total_amount"
                    android:text="@string/total"
                    android:textSize="18sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignLeft="@id/item_container"
                android:layout_alignRight="@id/item_container"
                android:layout_below="@id/item_container"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:src="@drawable/card_shadow" />
        </RelativeLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/add_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            bootstrapbutton:bb_text_gravity="center"
            android:text="@string/add_payment"
            android:textSize="17sp"
            bootstrapbutton:bb_icon_left="fa-plus-circle"
            bootstrapbutton:bb_size="small"
            bootstrapbutton:bb_type="warning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/account_info" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <AutoCompleteTextView
                    android:id="@+id/bank_name_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/bank_name"
                    android:inputType="text"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/bank_name_spinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/account_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/account_number"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>