<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/alarm_area"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/alarm_disabled_color">

        <Spinner
            android:id="@+id/alarm_period"
            android:entries="@array/alarm_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/alarm_time"
            android:text="12:12 am"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <ToggleButton
            android:id="@+id/alarm_toggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOn="@string/alarm_on"
            android:textOff="@string/alarm_off"
            android:checked="false" />

    </LinearLayout>


    <ScrollView
        android:layout_above="@id/alarm_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textSize="18sp"
                    android:padding="2.5dp"
                    android:gravity="center"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/card_shadow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_attendee"/>

                <ImageView
                    android:background="#cccccc"
                    android:layout_width="match_parent"
                    android:layout_margin="2dp"
                    android:layout_height="1px"/>

                <LinearLayout
                    android:id="@+id/attendee_view_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:src="@drawable/card_shadow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_info"/>

                <ImageView
                    android:background="#cccccc"
                    android:layout_width="match_parent"
                    android:layout_margin="2dp"
                    android:layout_height="1px"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bank_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/bank_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:src="@drawable/card_shadow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/items"/>

                <ImageView
                    android:background="#cccccc"
                    android:layout_width="match_parent"
                    android:layout_margin="2dp"
                    android:layout_height="1px"/>

                <LinearLayout
                    android:id="@+id/payment_view_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:src="@drawable/card_shadow"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
